--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <th><a href="Lab 2 - CSS/Lab2.html">Lab 2</a></th>
                     <th><a href="Lab 3 - Navigation Page/Lab3.html">Lab 3</a></th>
                     <th><a href="Lab 4 - JavaScript/Lab4.html">Lab 4</a></th>
-                    <th><a href="">Lab 5</a></th>
+                    <th><a href="Lab 5 - JavaScript 2/Lab5.html">Lab 5</a></th>
                     <th><a href="">Lab 6</a></th>
                     
                 </tr>
@@ -43,7 +43,7 @@
                     <td>CSS</td>
                     <td>Nav Page</td>
                     <td>JavaScript</td>
-                    <td>TBD</td>
+                    <td>JavaScript 2</td>
                     <td>TBD</td>
                     
                 </tr>
